--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Lambang_Kabupaten_Donggala.png" alt="Logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Lambang_Kabupaten_Donggala_%282015-sekarang%29.png" alt="Logo">
     <div>
       <div class="instansi">DINAS PENDIDIKAN DAN KEBUDAYAAN<br>KABUPATEN DONGGALA</div>
       <div>Alamat: Jalan Jati, Kelurahan Gunung Bale</div>
